tests/integration/snapshots/integration__commands__check__array_missing_value.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
[1, ]
stdout ---

stderr ---
error: expected json value, found `]`
 --> stdin:1:5
  |
1 | [1, ]
  |   - ^
  |   |
  |   expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - [1, ]
1 + [1 ]
  |
