tests/integration/snapshots/integration__commands__check__object_missing_colon_with_null.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi" null 
stdout ---

stderr ---
error: expected colon after key, found `null`
 --> stdin:1:7
  |
1 | {"hi" null 
  |  ---- ^^^^
  |  |
  |  expected due to `"hi"`
  |
help: insert the missing colon
  |
1 | {"hi":  null 
  |      +
