tests/integration/snapshots/integration__commands__check__object_trailing_comma_with_closed.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi": null, }
stdout ---

stderr ---
error: expected key, found `}`
 --> stdin:1:14
  |
1 | {"hi": null, }
  |            - ^
  |            |
  |            expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - {"hi": null, }
1 + {"hi": null }
  |
