tests/integration/snapshots/integration__commands__check__object_with_adjacent_strings.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi": "bye" "ferris": null
stdout ---

stderr ---
error: expected comma or closed curly brace, found `"ferris"`
 --> stdin:1:14
  |
1 | {"hi": "bye" "ferris": null
  | -    ------- ^^^^^^^^
  | |    |
  | |    expected due to the preceding key/value pair
  | object opened here by `{`
  |
help: is "ferris" a key? consider adding a comma
  |
1 | {"hi": "bye", "ferris": null
  |             +
