tests/integration/snapshots/integration__commands__check__unexpected_character.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
🦀
stdout ---

stderr ---
error: unexpected character `🦀`. expected start of a json value
 --> stdin:1:1
  |
1 | 🦀
  | ^^
